@@ -11,6 +11,7 @@ arguments
     opts.OutputAeroMatrices logical = false;
     opts.UseHdf5 = true;
     opts.createBat = false;
+    opts.cmdLineArgs char = '';
 end
 obj.OutputAeroMatrices = opts.OutputAeroMatrices;
 %% create BDFs
@@ -74,11 +75,14 @@ while attempt<opts.NumAttempts+1
         fprintf('Computing sol144 for Model %s: %.0f velocities ... ',...
             obj.Name,length(obj.V));
     end
+    
     command = [ads.nast.getExe,' ','sol144.bdf',...
         ' ',sprintf('out=..%s%s%s',filesep,'bin',filesep)];
     command = [command, ' ','news=no'];
     command = [command, ' ','notify=no'];
     command = [command, ' ','old=no'];
+    command = [command, ' ',opts.cmdLineArgs];
+    
     if opts.Silent || opts.TruelySilent
         command = [command,' ','1>NUL 2>NUL'];
     end
