@@ -7,7 +7,8 @@ and this project adheres to [Explicit Versioning](https://github.com/exadra37-ve
 
 ## [Unreleased]
 ### Added
-- nast.gust.Turb now allows the user to specify their own velocity PSDF in a random turbulence analysis. 
+- nast.gust.Turb now allows the user to specify their own velocity PSDF in a random turbulence analysis.
+- 103.run, 144.run and 146.run now allow the user to specify extra command line arguments to the Nastran .exe 
 ### Changed
 ### Deprecated
 ### Removed
